handler getUser finalizado
